--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.6.8"
+
   },
   "scripts": {
     "start": "react-scripts start",
